# healthwand

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  POSITIONING.md  README.md  TODO.md  audit-2026-05.md  sample.txt
.github/workflows/: ci.yml  healthcare-compliance.yml
.taskmaster/: config.json  state.json
.taskmaster/tasks/: tasks.json
config/: phi_patterns.yaml
docs/: CONTRIBUTING.md  phi-taxonomy-id.md
phi-detector/: Cargo.toml  README.md
phi-detector/config/: phi_patterns.schema.json  phi_patterns.yaml
phi-detector/docs/: output_format.md
phi-detector/src/: file_source.rs  lib.rs  main.rs  phi_patterns.rs  redactor.rs  results.rs  scanner.rs
phi-detector/tests/: integration_pipeline.rs
scripts/: PRD.txt  task-complexity-report.json
src/: error.rs  lib.rs  main.rs  phi_patterns.rs  scanner.rs
src/domain/: category.rs  finding.rs  mod.rs  pattern.rs  score.rs  severity.rs  span.rs
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
tests/: integration_pipeline.rs
