[package]
name = "healthwand"
version = "0.2.0"
edition = "2024"
rust-version = "1.87"
authors = ["Kresna Sucandra <https://github.com/SHA888>"]
license = "MIT"
repository = "https://github.com/MedAIFort/healthwand"
homepage = "https://github.com/MedAIFort/healthwand"
documentation = "https://docs.rs/healthwand"
keywords = ["phi", "healthcare", "indonesia", "uu-pdp", "redaction"]
categories = ["command-line-utilities", "data-structures"]

[lib]
name = "healthwand"
path = "src/lib.rs"

[[bin]]
name = "healthwand"
path = "src/bin/healthwand.rs"

[dependencies]
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.10"
