[package]
name = "phi-detector"
version = "0.1.0"
edition = "2024"
authors = ["Kresna Sucandra <https://github.com/SHA888>"]
license = "MIT"

[lib]
name = "phi_detector"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.10"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
